# oracle-gl-reconciliation-agent

./: .env.example  .gitignore  MEDIUM_ARTICLE.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
examples/: run_reconciliation.py
src/agents/: base_agent.py  claude_agent.py  factory.py  openai_agent.py  tools.py
src/oracle/: __init__.py  fbdi_generator.py  fusion_client.py  gl_queries.py
src/reports/: __init__.py  reconciliation_report.py
templates/: recon_report.html.j2
tests/: test_agents.py  test_fbdi_generator.py  test_gl_queries.py
